--- a/servicesfr.html
+++ b/servicesfr.html
@@ -118,7 +118,7 @@
 
 <div id="Service" class="hero-area d-flex align-items-center">
 
-<div class="hero-thumbnail equalize bg-img" style="background-image: url(img/bg-img/SonyA743.png);"></div>
+<div class="hero-thumbnail equalize bg-img" style="background-image: url(img/bg-img/SonyA743.jpg);"></div>
 
 
 <div class="hero-content equalize">
@@ -193,7 +193,7 @@
 </div>
 </div>
 
-<div class="sonar-testimonials-area bg-img" style="background-image: url(img/bg-img/SonyA744.png);">
+<div class="sonar-testimonials-area bg-img" style="background-image: url(img/bg-img/SonyA744.jpg);">
   
 <div class="container-fluid">
 <div class="row">
