--- a/portfolio_art.html
+++ b/portfolio_art.html
@@ -120,7 +120,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 <div class="hero-area d-flex align-items-center">
 
-<div class="hero-thumbnail equalize bg-img" style="background-image: url(img/bg-img/DSC5592.jpg);"></div>
+<div class="hero-thumbnail equalize bg-img" id="aboutimg"></div>
 
 <div class="hero-content equalize">
 <div class="container-fluid h-100">
