--- a/portfolio_artfr.html
+++ b/portfolio_artfr.html
@@ -111,7 +111,7 @@ Droits d'auteur &copy;<script>document.write(new Date().getFullYear());</script>
 
 <div class="hero-area d-flex align-items-center">
 
-<div class="hero-thumbnail equalize bg-img" style="background-image: url(img/bg-img/DSC5592.jpg);"></div>
+<div class="hero-thumbnail equalize bg-img" id="aboutimg"></div>
 
 <div class="hero-content equalize">
 <div class="container-fluid h-100">
