--- a/portfolio.html
+++ b/portfolio.html
@@ -359,7 +359,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_2.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_2.jpg" alt></a>
 
 <div class="gallery-content">
-<h4>Sunny Daydreams</h4>
+<h4>Happy Bride n Groom</h4>
 <p>Portrait</p>
 </div>
 </div>
