--- a/portfolio.html
+++ b/portfolio.html
@@ -391,7 +391,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 </div>
   
-<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_6.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_6.jpg" alt></a>
 
 <div class="gallery-content">
