--- a/portfolio.html
+++ b/portfolio.html
@@ -463,7 +463,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 </div>
   
-<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_23.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_23.jpg" alt></a>
 
 <div class="gallery-content">
@@ -472,7 +472,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 </div>
   
-<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_30.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_30.jpg" alt></a>
 
 <div class="gallery-content">
@@ -553,7 +553,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 </div>
   
-<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_40.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_40.jpg" alt></a>
 
 <div class="gallery-content">
@@ -562,7 +562,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </div>
 </div>
   
-<div class="col-12 col-sm-6 col-lg-3 single_gallery_item  portrait wow fadeInUpBig" data-wow-delay="500ms">
+<div class="col-12 col-sm-6 col-lg-3 single_gallery_item studio portrait wow fadeInUpBig" data-wow-delay="500ms">
 <a class="gallery-portrait" href="img/portfolio-img/portrait/Projet_WEB_41.jpg"><img src="img/portfolio-img/portrait/Projet_WEB_41.jpg" alt></a>
 
 <div class="gallery-content">
